2006-02-01  Patrick K O'Brien <pobrien@orbtech.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/argcheck.py:
	* tests/test_argcheck.py:

	Add parenthesis in percent checker, so it actually works and
	does not allow values above 100. Add unit tests.

=== 1.9.5 ===
2006-01-30  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* kiwi/environ.py (Library.__init__): Do not use an empty from list,
	it'll fail otherwise

=== 1.9.4 ===
2006-01-27  Johan Dahlin  <jdahlin@async.com.br>

	* NEWS: Update

	* kiwi/proxies.py (Proxy.update_many): New method, like update but
	takes a sequence instead

2006-01-25  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/proxies.py (Proxy.remove_widget, Proxy.add_widget): Add, to
	be able to add and remove widgets dynamically. Based on patch
	by Henrique Romano

	* kiwi/ui/test/common.py (Base.get_object): New function, to avoid
	accessing private members from subclasses.

	* kiwi/ui/test/player.py (Player.delete_window): delete the
	reference to the window, so it can be destroyed properly and
	new windows can be put here, eg when we reopen the dialog.

2006-01-24  Henrique Romano  <henrique@async.com.br>

	* kiwi/ui/widgets/label.py (Label.set_underline): 
	Implements set_underline method and a minor cleanup on all the other
	text properties setters.

2006-01-23  Johan Dahlin  <jdahlin@async.com.br>

	* examples/list/stockicon.py: New example to demonstrate this feature.

	* kiwi/ui/widgets/list.py: Add Column:use_stock and Column:icon-size.
	
2006-01-16  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/python.py (Settable): Another idea from twisted imported,
	and improved.

	* kiwi/ui/test/listener.py: Pass signals to event types.
	Add a SkipEvent exception to be able to filter inside the
	event. Fix DoubleClick event on the list to be caught earlier.
	
	* kiwi/ui/test/player.py (ThreadSafeFunction._invoke): 
	Refactor to always return False after the call.
